# persistent

./: stack.yaml
persistent-mysql-haskell/: persistent-mysql-haskell.cabal
persistent-mysql-haskell/Database/Persist/: MySQL.hs
